# population-genetics

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Doxyfile  Doxyfile.in  Genetics  Genetics_UnitTest  Makefile  README.md  cmake_install.cmake  program_using_tclap
data/: input.txt  input.txt.orig  inputTest.txt  test_input.txt
extra/: CMakeLists.txt
src/: Allele.cpp  Allele.hpp  Data.cpp  Data.hpp  Globals.hpp  Random.cpp  Random.hpp  Simulation.cpp  Simulation.hpp  SimulationsExecutor.cpp  SimulationsExecutor.hpp  data.cpp  data.hpp  main.cpp  random.cpp  random.h  random.hpp  random_main.cpp  test_main.cpp
test/: dataTest.cpp  main.cpp
test/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
